# gridgame

./: .gitignore  Cargo.toml
.cargo/: config.toml
.zed/: settings.json
assets/pillars/: pillar_base.glb
src/: abilities.rs  actions.rs  attack.rs  combat.rs  deck_and_cards.rs  effects.rs  grid_abilities_backend.rs  main.rs  melee.rs  projectiles.rs  states.rs  tiles_templates.rs  ui.rs
src/abilities/: abilities_templates.rs  definitions.rs  effects.rs  mod.rs
src/abilities_definitions/: definitions.rs
src/creatures/: definitions.rs  features.rs  generation.rs  mod.rs
src/debug/: ui.rs
src/deck/: card_blueprints.rs  card_builders.rs  deck_and_cards.rs  mod.rs
src/game_flow/: event_reactions.rs  mod.rs  turns.rs
src/movement/: mod.rs
src/stats/: players.rs
src/utils/: mod.rs
src/visuals/cards/: animation.rs
