[package]
name = "bigdrill"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.0", features = ["bevy_gltf", "debug", "dynamic_linking"] }
bevy-trait-query = "0.18.0"
bevy_diesel = { git = "https://github.com/DEMIURGE-studio/bevy_diesel.git", branch="main" }
bevy_gauge = { git = "https://github.com/DEMIURGE-studio/bevy_gauge.git", branch="main" }
bevy_gearbox = { git = "https://github.com/DEMIURGE-studio/bevy_gearbox.git", branch="Fix-core", features=["gauge"] }
bevy_ecs_tilemap = "0.18.1"
bevy_ghx_grid = "0.8.0"
bevy_ghx_proc_gen = {version = "0.8.0", features = ["bevy_ghx_grid"]}
bevy_tween = {version = "0.12.0", features = ["bevy_asset"]}
bevy_tweening = "0.15.0"
bevy_ui_anchor = "0.11.0"
bevy_dylib = { version = "0.18.0-rc.2" }
haalka = "0.7.1"
inventory = "0.3.24"
rand = "0.10"
bevy_rand = "0.14"
bevy_prng = { version = "0.14.2", features = ["wyrand"] }
wyrand = {version = "0.4.1", features=["rand_core"]}

[patch."https://github.com/DEMIURGE-studio/bevy_diesel.git"]
# Fixes bevy_diesel looking for its siblings
bevy_gauge = { git = "https://github.com/DEMIURGE-studio/bevy_gauge.git", branch="main" }
bevy_gearbox = { git = "https://github.com/DEMIURGE-studio/bevy_gearbox.git", branch="Fix-core" }

[patch."https://github.com/DEMIURGE-studio/bevy_gearbox.git"]
# Fixes bevy_gearbox (and bevy_gearbox_core) looking for bevy_gauge
bevy_gauge = { git = "https://github.com/DEMIURGE-studio/bevy_gauge.git", branch="main" }


# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

#[toolchain]
#channel = "nightly"
#
## /path/to/project/.cargo/config.toml
#[target.x86_64-unknown-linux-gnu]
#rustflags = [
#    # (Nightly) Make the current crate share its generic instantiations
#    "-Zshare-generics=y",
#]
